updated support for binding, updated generation